--- a/index.html
+++ b/index.html
@@ -5,189 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Roboto&display=swap" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+    <script src="script.js" defer></script>
     <title>Lines Game</title>
-    <style>
-        :root {
-            --fg-color: rgb(0, 109, 211);
-            --bg-color: rgb(75, 75, 75);
-            --p1-color: blue;
-            --p2-color: red;
-        }
-        *,*::before,*::after {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        body {
-            display: flex;
-            flex-direction: column;
-            width: 100vw;
-            height: 100vh;
-        }
-        header {
-            display: flex;
-            padding: 2vw;
-            justify-content: space-between;
-            background-color: var(--bg-color);
-            height: 15%;
-        }
-        .title {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
-        .title-text {
-            font-family: 'Dancing Script', cursive;
-            font-size: 5vh;
-            width: max-content;
-            color: white;
-        }
-        .turn {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
-        .turn-text {
-            font-family: 'Roboto', sans-serif;
-            font-size: 5vh;
-            width: max-content;
-        }
-        .turn-text.blue {
-            color: var(--p1-color);
-        }
-        .turn-text.red {
-            color: var(--p2-color);
-        }
-        main {
-            display: flex;
-            justify-content: space-around;
-            align-content: space-around;
-            height: 90%;
-        }
-        .container {
-            display: grid;
-            width: 100%;
-            justify-content: center;
-            align-content: center;
-            grid-template-columns: repeat(9, 1fr);
-            grid-template-rows: repeat(6, 1fr);
-            justify-items: stretch;
-            grid-template-areas:
-            ". . . . . . . . ."
-            ". . . . a . . . ."
-            ". . . b c d . . ."
-            ". . e f g h i . ."
-            ". j k l m n o p ."
-            ". . . . . . . . ."
-        }
-        .line {
-            border: none;
-            background-color: transparent;
-            border-radius: 4px;
-            cursor: pointer;
-            position: relative;
-        }
-        .line:hover {
-            background-color: rgba(114, 114, 114, 0.275);
-        }
-        .line::before {
-            content: '';
-            position: absolute;
-            background-color: var(--bg-color);
-            width: 3px;
-            height: 80%;
-            transform: translateX(-50%) translateY(-50%);
-        }
-        .line::after {
-            content: '';
-            position: absolute;
-            background-color: transparent;
-            width: 100%;
-            height: 2px;
-            left: 0px;
-            transform: translateY(-50%);
-        }
-        .line.crossed1 {
-            cursor: auto;
-        }
-        .line.crossed1:hover {
-            background-color: transparent;
-        }
-        .line.crossed1::after {
-            background-color: var(--p1-color);
-        }
-        .line.crossed2 {
-            cursor: auto;
-        }
-        .line.crossed2:hover {
-            background-color: transparent;
-        }
-        .line.crossed2::after {
-            background-color: var(--p2-color);
-        }
-        .line:active {
-            padding: 0;
-        }
-        .line1 {grid-area: a;}
-        .line2 {grid-area: b;}
-        .line3 {grid-area: c;}
-        .line4 {grid-area: d;}
-        .line5 {grid-area: e;}
-        .line6 {grid-area: f;}
-        .line7 {grid-area: g;}
-        .line8 {grid-area: h;}
-        .line9 {grid-area: i;}
-        .line10 {grid-area: j;}
-        .line11 {grid-area: k;}
-        .line12 {grid-area: l;}
-        .line13 {grid-area: m;}
-        .line14 {grid-area: n;}
-        .line15 {grid-area: o;}
-        .line16 {grid-area: p;}
-        .overlay {
-            display: none;
-            position: fixed;
-            background-color: rgba(0, 0, 0, 0.5);
-            left: 0;
-            top: 0;
-            right: 0;
-            bottom: 0;
-        }
-        .overlay.active {
-            display: block;
-        }
-        .popup {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-evenly;
-            position: fixed;
-            background-color: var(--fg-color);
-            border-radius: 50px;
-            padding: 0% 10%;
-            left: 20%;
-            top: 30%;
-            right: 20%;
-            bottom: 30%;
-        }
-        .message {
-            width: 100%;
-            text-align: center;
-            font-family: 'Roboto', sans-serif;
-            font-size: 5vh;
-            color: rgb(214, 214, 214);
-        }
-        .ok {
-            width: 100%;
-            text-align: center;
-            font-family: 'Roboto', sans-serif;
-            font-size: 3vh;
-            height: 50px;
-            border: none;
-            background-color: var(--bg-color);
-            color: rgb(214, 214, 214);
-            border-radius: 25px;
-        }
-    </style>
 </head>
 <body>
     <header>
@@ -224,182 +44,5 @@
             <button class="ok">OK</button>
         </div>
     </div>
-    <script>
-        let board = [[0],
-                  [0, 0, 0],
-               [0, 0, 0, 0, 0],
-            [0, 0, 0, 0, 0, 0, 0]];
-        const board_copy = [[0],
-                       [0, 0, 0],
-                    [0, 0, 0, 0, 0],
-                [0, 0, 0, 0, 0, 0, 0]];
-        let currentplayer = 1;
-        let firstSelection = true;
-        let selections = [[0,0],[0,0]];
-        const playerTranslation = ['Error', 'Blue', 'Red'];
-        const lines = document.querySelectorAll('.line');
-
-        const overlay = document.querySelector('.overlay');
-        const message = document.querySelector('.message');
-        const ok = document.querySelector('.ok');
-        
-        const turn_text = document.querySelector('.turn-text');
-
-        function numToCoordinate(n) {
-            var x = 0, y = 0;
-            if (n >= 2 && n <= 4) {
-                y = 1;
-                x = n-2;
-            }
-            if (n >= 5 && n <= 9) {
-                y = 2;
-                x = n-5;
-            }
-            if (n >= 10 && n <= 16) {
-                y = 3;
-                x = n-10;
-            }
-            return [x,y]
-        }
-        function boardByNum(n, value) {
-            if (value != undefined) {
-                switch (n) {
-                    case 1: board[0][0] = value; break;
-                    case 2: board[1][0] = value; break;
-                    case 3: board[1][1] = value; break;
-                    case 4: board[1][2] = value; break;
-                    case 5: board[2][0] = value; break;
-                    case 6: board[2][1] = value; break;
-                    case 7: board[2][2] = value; break;
-                    case 8: board[2][3] = value; break;
-                    case 9: board[2][4] = value; break;
-                    case 10: board[3][0] = value; break;
-                    case 11: board[3][1] = value; break;
-                    case 12: board[3][2] = value; break;
-                    case 13: board[3][3] = value; break;
-                    case 14: board[3][4] = value; break;
-                    case 15: board[3][5] = value; break;
-                    case 16: board[3][6] = value; break;
-            }  
-            }
-            switch (n) {
-                case 1: return board[0][0]; break;
-                case 2: return board[1][0]; break;
-                case 3: return board[1][1]; break;
-                case 4: return board[1][2]; break;
-                case 5: return board[2][0]; break;
-                case 6: return board[2][1]; break;
-                case 7: return board[2][2]; break;
-                case 8: return board[2][3]; break;
-                case 9: return board[2][4]; break;
-                case 10: return board[3][0]; break;
-                case 11: return board[3][1]; break;
-                case 12: return board[3][2]; break;
-                case 13: return board[3][3]; break;
-                case 14: return board[3][4]; break;
-                case 15: return board[3][5]; break;
-                case 16: return board[3][6]; break;
-            }
-        }
-        function changePlayer(player) {
-            if (player != undefined) {
-                currentplayer = player
-            } else {
-                if (currentplayer == 1) {
-                   currentplayer = 2;
-                   turn_text.innerText = 'Red';
-                   turn_text.classList.replace('blue', 'red');
-                } else {
-                    currentplayer = 1;
-                    turn_text.innerText = 'Blue';
-                    turn_text.classList.replace('red', 'blue');
-                }
-            }
-        }
-        function checkForWin() {
-            var win = true;
-            board.forEach((y) => {
-                y.forEach((x) => {
-                    if (x == 0) {
-                        win = false;
-                    }
-                })
-            })
-            if (win) {
-                if (currentplayer == 1) {
-                    var winner = 2;
-                } else {
-                    var winner = 1;
-                }
-                popup(playerTranslation[winner] + ' won!');
-                board = JSON.parse(JSON.stringify(board_copy));
-                updateUi();
-            }
-        }
-        function popup(messageText, remove) {
-            if (remove != true) {
-                overlay.classList.add('active');
-            } else {
-                overlay.classList.remove('active');
-            }
-            message.innerText = messageText
-        }
-        function updateUi() {
-            lines.forEach((line) => {
-                switch (boardByNum(parseInt(line.id.replace('line', '')))) {
-                    case 0:
-                        line.classList.remove('crossed1')
-                        line.classList.remove('crossed2')
-                        break;
-                    case 1:
-                        line.classList.add('crossed1')
-                        line.classList.remove('crossed2')
-                        break;
-                    case 2:
-                        line.classList.add('crossed2')
-                        line.classList.remove('crossed1')
-                        break;
-                }
-            })
-        }
-
-        lines.forEach((line) => {
-            line.addEventListener('click', () => {
-                n = parseInt(line.id.replace('line', ''));
-                c = numToCoordinate(n);
-                if (board[c[1]][c[0]] != 0) return;
-                if (firstSelection) {
-                    selections[0] = c;
-                } else {
-                    selections[1] = c;
-                    if (selections[0][1] != selections[1][1]) {
-                        firstSelection = true;
-                        return;
-                    }
-                    diff = Math.abs(selections[0][0] - selections[1][0]) + 1;
-                    y = selections[0][1]
-                    for(var i = 0; i < diff; i++) {
-                        x = Math.min(selections[0][0], selections[1][0]) + i;
-                        if (board[y][x] != 0) {
-                        firstSelection = true;
-                        return;
-                    }
-                    }
-                    for(var i = 0; i < diff; i++) {
-                        x = Math.min(selections[0][0], selections[1][0]) + i;
-                        board[y][x] = currentplayer;
-                    }
-                    checkForWin()
-                    changePlayer()
-                    updateUi()
-                }
-                firstSelection = !firstSelection
-            });
-        });
-        
-        ok.addEventListener('click', () => {
-            popup('Error', true);
-        })
-</script>
 </body>
 </html>
