--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Lines Game</title>
 </head>
 <body>
+    <canvas id="animationCanvas"></canvas>
     <header>
         <div class="title">
             <p class="title-text">The Line Game</p>
